--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,3 +6,59 @@
     <%= link_to 'link', '' %>
   </li>
 </ul>
+<div class="btn-group nave_item"><%= link_to '#', class: 'btn btn-small dropdown-toggle','data-toggle' => 'dropdown' do %>
+	Categories <span class="caret"></span>
+<% end %>
+
+<ul class="dropdown-menu">
+<% Category.all.each do |cat| %>
+  <li><%= link_to cat.name, category_path(cat) %> </li>
+<% end %>
+<% if logged_in? %>
+  <li class="divider"></li><li><%= link_to(new_category_path) do  %>
+  <i class="icon-plus"></i>
+  New Category
+<% end %>
+ </li>
+ <% end %>
+</ul>
+</div>
+<% if logged_in? %>
+  <div class="nav_item">
+    <%= link_to 'New Post', new_post_path, class: 'btn btn-success btn-small' %>
+  </div>
+  <div class="btn-group nav_item">
+    <%= link_to('',class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown') do %>
+      <%= current_user.username %>
+      <span class="caret"></span>
+
+    <% end %>
+     <ul class="dropdown-menu">
+      <li><%= link_to  edit_user_path(current_user)  do %>
+        <i class="icon-pencil"></i> Edit Profile
+        <% end %>
+      </li>
+      <li><%= link_to  user_path(current_user)  do %>
+        <i class="icon-user"></i> View Profile
+        <% end %>
+      </li>
+      <li><%= link_to  logout_path  do %>
+        <i class="icon-circle-arrow-left"></i> Log out
+        <% end %>
+      </li>
+     </ul>
+    
+  </div>
+  
+
+  <div class="nav_item">
+    <%= link_to 'Logout', logout_path, class: 'btn btn-success btn-small' %>
+  </div>
+<% else %>
+  <div class="nav_item">
+    <%= link_to 'Log in', login_path, class: 'btn btn-success btn-small' %>
+  </div>
+  <div class="nav_item">
+    <%= link_to 'Register', register_path, class: 'btn btn-success btn-small' %>
+  </div>
+<% end %>
