--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,6 +19,6 @@
     <% end %>
 <% end %>    
 
-    <%= render 'shared/comments', obj: @post %>
+    <%= render 'comments/comments', obj: @post %>
 
 
