--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,5 +15,5 @@
 <% if params[:tab].nil? %>
  <%= render 'posts/post', post: @user.posts %>
 <% else %>
-  <%= render 'shared/comments', obj: @user, post_link: true %>
+  <%= render 'comments/comments', obj: @user, post_link: true %>
 <% end %> 
